# twine

./: .gitignore  .gitmodules  CMakeLists.txt  HISTORY.md  LICENSE  README.md  bitbucket-pipelines.yml  generate  twine.def  vcpkg.json
include/: twine.h  worker_pool.h
include/twine/: twine.h
src/: apple_threading.cpp  apple_threading.h  condition_variable_implementation.h  flags.h  std_worker_pool.cpp  std_worker_pool.h  thread_helpers.h  thread_helpers_cobalt.cpp  thread_helpers_evl.cpp  thread_helpers_posix.cpp  twine.cpp  twine_internal.h  twine_version.h.in  windows_threading.h  worker_pool_common.h  worker_pool_implementation.h  xenomai_stubs.h  xenomai_worker_pool.cpp  xenomai_worker_pool.h
test/: CMakeLists.txt
test/stresstest/: CMakeLists.txt  cond_var_full_duplex_test.cpp  cond_var_stresstest.cpp  pool_stresstest.cpp  stresstest.cpp
test/test_utils/: apple_coreaudio_mockup.cpp  apple_coreaudio_mockup.h  apple_mock_lambdas.h  getopt_win.h
test/unittests/: condition_variable_test.cpp  std_worker_pool_tests.cpp  twine_tests.cpp  worker_pool_tests.cpp
